--- a/src/app/elements/navbar/navbar.component.html
+++ b/src/app/elements/navbar/navbar.component.html
@@ -1,8 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-md fixed-top navbar-dark">
   <div class="container">
 
-    <a class="navbar-brand hidden-xxs long-navbar-brand" routerLink="home">Judo Club Olympia Zonhoven</a>
-    <a class="navbar-brand hidden-bigger-then-xxs" routerLink="home">JCOZ</a>
+    <!-- BrandName -->
+    <a class="navbar-brand d-none d-lg-inline long-navbar-brand" routerLink="home">
+      <img src="../../../assets/images/logojcoz.jpg" height="50px"/>
+      Judo Club Olympia Zonhoven
+    </a>
+    <a class="navbar-brand d-inline d-lg-none" routerLink="home">
+      <img src="../../../assets/images/logojcoz.jpg" height="50px"/>
+      JCOZ
+    </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,6 +18,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav navbar-right">
+        <li class="nav-item"><a class="nav-link" routerLink="home"><mat-icon>home</mat-icon></a></li>
         <li class="nav-item"><a class="nav-link" routerLink="info">Info</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="foto">Foto's</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="olympia-trophy">Olympia Trophy</a></li>
