--- a/src/app/elements/navbar/navbar.component.html
+++ b/src/app/elements/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark">
-  <div class="container">
 
-    <!-- BrandName -->
+    <!-- Logo and brand -->
     <a class="navbar-brand d-none d-lg-inline long-navbar-brand" routerLink="home">
       <img src="../../../assets/images/logojcoz.jpg" height="50px"/>
       Judo Club Olympia Zonhoven
@@ -11,6 +10,7 @@
       JCOZ
     </a>
 
+    <!-- Menu -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,4 @@
         <li class="nav-item"><a class="nav-link" routerLink="contact">Contact</a></li>
       </ul>
     </div>
-
-  </div>
 </nav>
