--- a/src/app/elements/navbar/navbar.component.html
+++ b/src/app/elements/navbar/navbar.component.html
@@ -18,13 +18,13 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link" routerLink="home"><mat-icon>home</mat-icon></a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="info">Info</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="foto">Foto's</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="olympia-trophy">Olympia Trophy</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="trainers">Trainers</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="leerplan">Leerplan</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="contact">Contact</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" routerLink="home"><mat-icon>home</mat-icon></a></li> -->
+        <li class="nav-item"><a class="nav-link" routerLink="/info">Info</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/foto">Foto's</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/olympia-trophy">Olympia Trophy</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/trainers">Trainers</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/leerplan">Leerplan</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/contact">Contact</a></li>
       </ul>
     </div>
 </nav>
