--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,12 +5,22 @@
 <!-- Content Section -->
 <section>
     <div class="container">
+
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="section-heading">Section Heading</h1>
-                <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-            </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title><h2>Judoweekend</h2></mat-card-title>
+                    <mat-card-subtitle><h5>28 - 30 september 2018</h5></mat-card-subtitle>
+                </mat-card-header>
+
+                <mat-card-content>
+                    Judoweekend van 28 sept tot 30 sept in Bloso Genk. 28 sept zal er dan geen training zijn.
+                </mat-card-content>
+
+            </mat-card>
+          </div>
         </div>
+
     </div>
 </section>
