--- a/src/app/shared/judo-content/judo-content.component.html
+++ b/src/app/shared/judo-content/judo-content.component.html
@@ -1,3 +1,4 @@
 <div class="judo-content container">
+    <breadcrumb [allowBootstrap]="true"></breadcrumb>
     <ng-content select="[content]"></ng-content>
 </div>
